--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "bootstrap": "^5.3.0",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
@@ -17,8 +18,10 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "reactstrap": "^9.2.0",
+    "redux-logger": "^3.0.6",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
