--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.14.1",
     "reactstrap": "^9.2.0",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
