--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "bootstrap": "^5.3.2",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
+    "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
